Fix scrollbar map with markers

--- a/application/client/src/app/ui/views/workspace/map/styles.less
+++ b/application/client/src/app/ui/views/workspace/map/styles.less
@@ -8,6 +8,7 @@
     top: 0;
     right: 8px;
     background: @scheme-color-7;
+    z-index: 1;
     & canvas {
         cursor: default;
         position: relative;
